# bookie

./: .gitignore  Cargo.toml  README.md  books.json  release.sh  saved_state.json  state.json
src/: app.rs  event_handling.rs  exit.rs  image_util.rs  logging.rs  main.rs  persistance.rs  renderer.rs  rendering.rs  util.rs  view.rs
src/domain/: app.rs  book.rs  book_form.rs  layout.rs  mod.rs  model.rs  view.rs
src/event/: add_book.rs  app_event.rs  book_detail.rs  book_form.rs  book_info.rs  book_list.rs  book_table.rs  hander.rs  mod.rs  status.rs
src/model/: book.rs  book_info.rs  book_table.rs  focus.rs  mod.rs  model.rs  persistance.rs  running_state.rs  status.rs
src/model/book/: mod.rs  reading_status.rs
src/model/book_info/: form.rs  form_field.rs  mod.rs  text_input.rs
src/model/book_table/: mod.rs
src/render/: add_book.rs  book_detail.rs  book_form.rs  book_list.rs  book_stats.rs  mod.rs  table.rs
src/view/: book_details.rs  book_stats.rs  book_table.rs  mod.rs  title.rs
src/view/content/: book_info.rs  book_stats.rs  book_table.rs  mod.rs
src/view/footer/: mod.rs  status.rs
src/view/header/: help.rs  mod.rs
