[package]
name = "bookie-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
crossterm = "0.29.0"
fern = "0.7"
log = "0.4"
ratatui = "0.29.0"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
unicode-width = "0.2"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
rstest = "0.26.1"
