[package]
name = "bookie"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
crossterm = "0.29.0"
fern = "0.7"
image = "0.25.9"
log = "0.4"
ratatui = "0.29.0"
ratatui-image = "8.1.1"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
unicode-width = "0.2"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
color-eyre = "0.6.5"
unicode-segmentation = "1.12.0"

[dev-dependencies]
rstest = "0.26.1"
